ics-operations-app/overlays/intg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ics-operations-app-ingress
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
  - host: ics-operations-app-intg.apps.infnp-osc.incora.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ics-operations-app
            port:
              number: 8080
